# ai-agent-text-ro

./: .gitignore  README.md  pyproject.toml
data/: config.json  faq_en.json  faq_ro.json  intents_en.json  intents_ro.json  memory.db
docs/: DECISIONS.md  MENTOR_NOTES.md
src/ro_ai_agent/: __init__.py  __main__.py  cli.py  config.py  engine.py  faq.py  lang.py  learning.py  memory.py  pipeline.py  tts.py  ui_app.py
src/ro_ai_agent/ui/: main_window.py
tests/: test_memory.py  test_pipeline.py
